--- a/aboutus.html
+++ b/aboutus.html
@@ -66,20 +66,25 @@
             </div>
             <div class="col-12 col-sm-6">
                 <div class="card">
-                    <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+                    <h3 class="card-header bg-info text-white">Facts At a Glance</h3>
                     <div class="card-body">
                         <dl class="row">
                             <dt class="col-6">Started</dt>
-                            <dd class="col-6">3 Feb. 2013</dd>
-                            <dt class="col-6">Major Stake Holder</dt>
-                            <dd class="col-6">HK Fine Foods Inc.</dd>
-                            <dt class="col-6">Last Year's Turnover</dt>
-                            <dd class="col-6">$1,250,375</dd>
+                            <dd class="col-6">7 March 1916, Munich, Germany</dd>
+                            <dt class="col-6">Production output</dt>
+                            <dd class="col-6">2,564,025 vehicles (2019)</dd>
+                            <dt class="col-6">Subsidiaries</dt>
+                            <dd class="col-6">Rolls-Royce Motor Cars, BMW Bank, BMW Motorrad</dd>
+                            <dt class="col-6">Sales (2020)</dt>
+                            <dd class="col-6">2.3 million passenger vehicles and 169,000 motorcycles</dd>
+                            <dt class="col-6">Profit before Tax (2019)</dt>
+                            <dd class="col-6">€ 7.118 billion on revenues amounting to € 104.210 billion</dd>
                             <dt class="col-6">Employees</dt>
-                            <dd class="col-6">40</dd>
+                            <dd class="col-6">126,016 employees as of 31 December, 2019</dd>
                         </dl>
                     </div>
                 </div>
+                <br>
             </div>
             <div class="col-12">
                 <div class="card card-body bg-light">
@@ -94,61 +99,44 @@
         <div class="row row-content">
             <div class="col-12 ">
                 <h2>Corporate Leadership</h2>
-                <div id="accordion">
-                    <div class="card">
-                        <div class="card-header" role="tab" id="peterhead">
-                            <h3 class="mb-0">
-                                <a data-toggle="collapse" data-target="#peter">
-                                Peter Pan <small>Chief Epicurious Officer</small>
-                                </a>
-                            </h3>
-                        </div>
-                        <div class="collapse show" id="peter" data-parent="#accordion">
-                            <div class="card-body">
-                                <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
-                            </div>
-                        </div>
+                <div class="card">
+                    <div class="card-header" role="tab" id="peterhead">
+                        <h3 class="mb-0">
+                            Peter Pan <small>Chief Epicurious Officer</small>
+                        </h3>
                     </div>
-                        <div class="card">
-                            <div class="card-header" role="tab" id="dannyhead">
-                                <h3 class="mb-0">
-                                    <a class="collapsed" data-toggle="collapse" data-target="#danny">
-                                    Dhanasekaran Witherspoon <small>Chief Food Officer</small>
-                                    </a>
-                                </h3>
-                            </div>
-                            <div class="collapse" id="danny" data-parent="#accordion">
-                                <div class="card-body">
-                                    <p class="d-none d-sm-block">Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from  a long established family tradition in farming and produce. His experiences growing up on a farm in the  Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words,    <em>Everything that runs, wins, and everything that stays, pays!</em></p>
-                                </div>
-                            </div>
-                        </div>
-                    <div class="card">
-                        <div class="card-header" role="tab" id="agumbehead">
-                            <h3 class="mb-0">
-                                <a class="collapsed" data-toggle="collapse" data-target="#agumbe">
-                                Agumbe Tang <small>Chief Taste Officer</small>
-                                </a>
-                            </h3>
-                        </div>
-                        <div class="collapse" id="agumbe" data-parent="#accordion">
-                            <div class="card-body">
-                                <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
-                            </div>
-                        </div>
+                    <div class="card-body">
+                        <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
                     </div>
-                    <div class="card">
-                        <div class="card-header" role="tab" id="albertohead">
-                            <h3 class="mb-0">
-                                <a class="collapsed" data-toggle="collapse" data-target="#alberto">
-                                Alberto Somayya <small>Executive Chef</small></a>
-                            </h3>
-                        </div>
-                        <div class="collapse" id="alberto" data-parent="#accordion">
-                            <div class="card-body">
-                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
-                            </div>
-                        </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" role="tab" id="dannyhead">
+                        <h3 class="mb-0">
+                            Dhanasekaran Witherspoon <small>Chief Food Officer</small>
+                        </h3>
+                    </div>                            
+                    <div class="card-body">
+                        <p class="d-none d-sm-block">Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from  a long established family tradition in farming and produce. His experiences growing up on a farm in the  Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words,    <em>Everything that runs, wins, and everything that stays, pays!</em></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" role="tab" id="agumbehead">
+                        <h3 class="mb-0">
+                            Agumbe Tang <small>Chief Taste Officer</small>
+                        </h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" role="tab" id="albertohead">
+                        <h3 class="mb-0">
+                            Alberto Somayya <small>Executive Chef</small>
+                        </h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
                     </div>
                 </div>
             </div>
@@ -201,28 +189,28 @@
        </div>   
     </div>
 
-    <footer class="footer">
-        <div class="container">
-            <div class="row">             
+    <footer class = "footer">
+        <div class = "container">
+            <div class = "row">             
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="explore.html">Explore</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-                        121, Clear Water Bay Road<br>
-                        Clear Water Bay, Kowloon<br>
-                        HONG KONG<br>
-                        <i class="fa fa-phone fa-lg"></i> Tel.: +852 1234 5678<br>
-                        <i class="fa fa-fax fa-lg"></i>Fax: +852 8765 4321<br>
-                        <i class="fa fa-envelope fa-lg"></i>Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
-                     </address>
+		              123, BMW Deutche Motoren<br>
+		              Mathura Road, New Delhi<br>
+		              Delhi, India<br>
+		              <i class="fa fa-phone fa-lg"></i> Tel.: +123 1234 5678<br>
+		              <i class="fa fa-fax fa-lg"></i>Fax: +987 8765 4321<br>
+		              <i class="fa fa-envelope fa-lg"></i>Email: <a href="mailto:bmw@motors.net">bmw@motors.net</a>
+		           </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
@@ -237,9 +225,10 @@
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <br>
+                    <p>© Copyright 2022 BMW India</p>
                 </div>
-           </div>
+            </div>
         </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
