--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Ristorante Con Fusion: About Us</title>
+    <title>BMW: Contact Us</title>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,12 +24,11 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#"><a class="navbar-brand mr-auto" href="index.html"><img src="img/logo.png" height="30" width="41"></a></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="explore.html"><span class="fa fa-list fa-lg"></span> Explore</a></li>
                         <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
             </div>
@@ -39,12 +38,9 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+                <div class="col-12">
+                    <h1>BMW</h1>
+                    <p>To contact us, please send an email to contact.india@bmw.in or to reach our Customer Interaction Centre, dial toll free number 1800 102 2269 from Monday to Saturday 09:00 hours to 18:30 hours.</p>
                 </div>
             </div>
         </div>
@@ -66,33 +62,41 @@
            <div class="col-12">
               <h3>Location Information</h3>
            </div>
-            <div class="col-12 col-sm-4 offset-sm-1">
-                   <h5>Our Address</h5>
-                    <address style="font-size: 100%">
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope"></i>:
-                        <a href="mailto:confusion@food.net">confusion@food.net</a>
-		           </address>
-            </div>
-            <div class="col-12 col-sm-6 offset-sm-1">
-                <h5>Map of our Location</h5>
-            </div>
-            <div class="col-12 col-sm-11 offset-sm-1">
-                <div class="btn-group" role="group">
-                    <a role="button" class="btn btn-primary" href="tel:+85212345678"><i class="fa fa-phone"></i> Call</a>
-                    <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
-                    <a role="button" class="btn btn-success" href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>
+            <div class="col-12 col-sm-6">
+                <br>
+                <h5>Our Address</h5>
+                <div>
+                    <address>
+                        123, BMW Deutche Motoren<br>
+                        Mathura Road, New Delhi<br>
+                        Delhi, India<br>
+                            <i class="fa fa-phone fa-lg"></i> Tel.: +123 1234 5678<br>
+                            <i class="fa fa-fax fa-lg"></i>Fax: +987 8765 4321<br>
+                            <i class="fa fa-envelope fa-lg"></i>Email: 
+                            <a href="mailto:bmw@motors.net">bmw@motors.net</a>
+                    </address> <br>
+                    <div class="btn-group" role="group">
+                        <a role="button" class="btn btn-primary" href="tel:+85212345678"><i class="fa fa-phone"></i> Call</a>
+                        <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
+                        <a role="button" class="btn btn-success" href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>
+                    </div> 
+                    <div>
+                        <br>
+                        <img src="img/service.png" alt="service" height="300" width="500">
+                    </div>
                 </div>
+            </div>
+            <div class="col-12 col-sm-6">
+                <br>
+                <h5>Map of Our Location</h5> <br>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.7342597986117!2d77.2929186145569!3d28.51764189602344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce6b7b4b53e31%3A0xf7c5b5cfa545e4ca!2sBMW%20Deutsche%20Motoren%20%7C%20Mathura%20Road!5e0!3m2!1sen!2sin!4v1616044324540!5m2!1sen!2sin" width="600" height="480" style="border:0;" allowfullscreen="false" loading="lazy"></iframe>
             </div>
         </div>
 
         <div class="row row-content">
            <div class="col-12">
               <h3>Send us your Feedback</h3>
+              <br>
            </div>
             <div class="col-12 col-md-9">
                 <form>
@@ -157,46 +161,46 @@
        </div>
     </div>
 
-    <footer class="footer">
-        <div class="container">
-            <div class="row">             
+    <footer class = "footer">
+        <div class = "container">
+            <div class = "row">             
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="aboutus.html">About</a></li>
+                        <li><a href="explore.html">Explore</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-                      <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
-                      <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
-                      <i class="fa fa-envelope fa-lg"></i>: 
-                      <a href="mailto:confusion@food.net">confusion@food.net</a>
+		              123, BMW Deutche Motoren<br>
+		              Mathura Road, New Delhi<br>
+		              Delhi, India<br>
+		              <i class="fa fa-phone fa-lg"></i> Tel.: +123 1234 5678<br>
+		              <i class="fa fa-fax fa-lg"></i>Fax: +987 8765 4321<br>
+		              <i class="fa fa-envelope fa-lg"></i>Email: <a href="mailto:bmw@motors.net">bmw@motors.net</a>
 		           </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
-                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
-                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-                        <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
+                        <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope fa-lg"></i></a>
                     </div>
                 </div>
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <br>
+                    <p>© Copyright 2022 BMW India</p>
                 </div>
-           </div>
+            </div>
         </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
