--- a/explore.html
+++ b/explore.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
     <!-- endbuild -->
-    <title>BMW: About Us</title>
+    <title>BMW: Explore</title>
 
 </head>
 
